--- a/src/app/components/rooms/rooms.component.scss
+++ b/src/app/components/rooms/rooms.component.scss
@@ -184,6 +184,11 @@ tr:hover {
     background-color: #f8d7da;
     color: #721c24;
   }
+
+  &.maintenance {
+    background-color: #fff3cd;
+    color: #856404;
+  }
 }
 
 .actions {
